Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

* Version 0.0.43 (unreleased)

** libshishi: Make client-side IPv6 support work.

** Update gnulib files.

** API and ABI modifications:
No changes since last version.

* Version 0.0.42 (released 2010-03-15)

** libshishi: Add APIs to save keys on keytab format.
The functions are shishi_keys_to_keytab_file and
shishi_keys_to_keytab_mem.

** libshishi: Add APIs to retrieve/set the timestamp for a key.
Typically only used by keytab format.  The functions are
shishi_key_timestamp and shishi_key_timestamp_set.

** libshishi: Add API to read several keys from a file.
The function is shishi_keys_from_file.

** keytab2shishi: Add --reverse (-R) parameter to write Keytab files.
This allows you to use create Keytab files from your Shishi hostkeys.

** libshishi: Fix bug where '3des' is parsed as 'des'.

** minitasn1: Internal copy upgraded to GNU Libtasn1 v2.5.

** API and ABI modifications:
shishi_key_timestamp: ADD.
shishi_key_timestamp_set: ADD.
shishi_keys_from_file: ADD.
shishi_keys_to_keytab_file: ADD.
shishi_keys_to_keytab_mem: ADD.

* Version 0.0.41 (released 2010-01-19)

** Add configuration keyword 'quick-random' to speed up libgcrypt.

** Fix libgcrypt detection (problem with libgpg-error dependency).

** Update many gnulib files.

** minitasn1: Internal copy upgraded to GNU Libtasn1 v2.4.

** API and ABI modifications:
No changes since last version.

* Version 0.0.40 (released 2009-04-03)

** shisa: Fix bug that made command line parameter parsing unreliable.

** Shishi can now be cross-compiled to Windows using MinGW.
See <http://josefsson.org/gnutls4win/> for build scripts and pre-built
binary packages.

** API and ABI modifications:
No changes since last version.

* Version 0.0.39 (released 2009-03-30)
